# qrev

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  qai_csv_sample.csv
ai/: .gitignore  Dockerfile  Makefile  README.md  poetry.toml  pyproject.toml
ai/examples/: config.toml
ai/projects/agent/: Makefile  pyproject.toml
ai/projects/agent/examples/google/: example_response_places.json  example_response_restaraunts.json
ai/projects/agent/src/qai/agent/: __init__.py  basic.py  qaibot.py  serve.py  tools.py
ai/projects/agent/src/qai/agent/agents/: campaign_agent.py  conversation.py  conversation_agent.py  email_agent.py  example_agent.py  find_agent.py  sql_query.py  sqlquery_agent.py
ai/projects/agent/src/qai/agent/data/: state_codes.py
ai/projects/agent/src/qai/agent/db/: existing_customers_db.py
ai/projects/agent/src/qai/agent/llama_index/: llm_program.py
ai/projects/agent/src/qai/agent/models/: lead_model.py
ai/projects/agent/src/qai/agent/tools/: str_utils.py  (+1 more)
ai/projects/agent/tests/: mock_email_tool.py  test_campaigns.py  test_distribute.py  test_email_draft.py  test_format_str.py
ai/projects/agent/tests/fix/: test_campaigns.py
ai/projects/agent/tests/google/: test_google_places.py
ai/projects/ai/: .gitignore  Makefile  pyproject.toml
ai/projects/ai/src/qai/ai/: __init__.py  config.py  query.py
ai/projects/ai/tests/: test_llama_chroma.py  test_mock_openai.py  test_nltk.py
ai/projects/ai/tests/fix/: test_prompt_maker.py
ai/projects/chat/: .dockerignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
ai/projects/chat/src/qai/chat/: __init__.py  config.py  models.py
ai/projects/chat/tests/: test_chatbot_openai.py
ai/projects/chat/tests/data/: data_fact_table.csv
ai/projects/chat/tests/data/test_website/: meta.json
ai/projects/chat/tests/fix/: test_retriever.py
ai/projects/chroma-server/: Dockerfile  Makefile  README.md  pyproject.toml
ai/projects/chroma-server/scripts/: import.py  llama_chroma.py  run_server.sh  stage_docker.sh
ai/projects/core/: model.json  pyproject.toml
ai/projects/core/src/qai/core/: __init__.py  meta.py
ai/projects/core/tests/: test_meta.py
ai/projects/schema/: README.md  pyproject.toml
ai/projects/schema/src/qai/schema/: __init__.py  extensions.py  models.py
ai/projects/schema/tests/: conftest.py  monkey_patch_mock_beanie.py  test_beanie_extension.py  test_data_sources.py  test_merge.py  test_merge_company.py  test_mongo_schema copy.py  test_phonenumber_parsing.py
ai/projects/schema/tests/address/postal/: test_address_expand.py  test_transform_address.py
ai/projects/scraper/: .gitignore  .metadata.json  Makefile  README.md  metadata.json  pyproject.toml
ai/projects/scraper/scripts/: extract.py  extract_filter.py
ai/projects/scraper/src/qai/scraper/: __init__.py  definitions.py
ai/projects/scraper/tests/: test_div_table.py  test_filter.py  test_html_writer.py  test_markdown_writer.py  test_one_deep.py  test_parse_config.py  test_scrape.py  test_simplifier.py  test_tag_denest.py  test_tag_keeper.py  test_tag_remover.py
ai/projects/server/: .dockerignore  Dockerfile  Makefile  README.md  compose.yml  pyproject.toml
ai/projects/server/examples/requests/: company_chatbot.json
ai/projects/server/scripts/: run_server.sh  stage_docker.sh
ai/projects/server/src/qai/server/: __init__.py  config.py  models.py  run.py  serve.py
ai/projects/server/tests/: test_serve_campaign_models.py  test_serve_local.py  test_serve_models.py  test_serve_remote.py
ai/projects/server/tests/campaign/: test_create_campaign_models.py  test_create_campaign_models_to_schema.py
ai/projects/server/tests/examples/: example.env
ai/projects/server/tests/examples/requests/: campaign_request.json  campaign_response.json
ai/projects/storage/: Makefile  pyproject.toml
ai/projects/storage/src/qai/storage/: __init__.py  retriever.py
ai/projects/storage/tests/: test_aws_history.py
ai/projects/template/: .gitignore  pyproject.toml
projects/agent/: .gitignore  Makefile  README.md  pyproject.toml
projects/agent/src/qai/agent/: __init__.py  basic.py  models.py
projects/agent/src/qai/agent/agents/: find_agent.py
projects/agent/src/qai/agent/db/: lead_db.py
projects/agent/src/qai/agent/sessions/: qai_session.py
projects/agent/src/qai/agent/utils/: db_utils.py  distribute.py
projects/agent/tests/: mock_email_tool.py  test_distribute.py  test_email_draft.py  test_make_email copy.py
projects/agent/tests/google/: test_google_places.py
projects/ai/: Makefile  README.md  pyproject.toml
projects/ai/src/qai/ai/: llm.py
projects/ai/src/qai/ai/utils/: nltk_extras.py  token_utils.py  validation_utils.py
projects/ai/tests/: test_llama_chroma.py  test_mock_openai.py
projects/ai/tests/data/test_website/: lorem.html
projects/chroma-server/: Makefile  compose.yml  pyproject.toml
projects/chroma-server/scripts/: pre_run.sh  s3_utils.py  strip_toml.py
projects/core/: Makefile  README.md  metadata.json  pyproject.toml  t.py
projects/core/src/qai/core/: message.py  meta.py  t.py
projects/schema/: .gitignore  Makefile  pyproject.toml
projects/schema/src/qai/schema/: __init__.py  extensions.py
projects/schema/src/qai/schema/mergers/: company_merger.py  merge.py
projects/schema/src/qai/schema/models/: addons.py  address.py  address_model.py  campaign_model.py  company_model.py  contact_model.py  email_model.py  models.py  name_model.py  person_model.py
projects/schema/src/qai/schema/parsers/: address_parser.py  address_parser_postal.py  address_parser_pyap.py  load_parsers.py
projects/schema/src/qai/schema/resolvers/: person_resolver.py
projects/schema/src/qai/schema/utils/: utils.py
projects/schema/tests/: conftest.py  test_merge_company.py
projects/schema/tests/address/: test_address_expand.py  test_formatter.py  test_transform_address.py
projects/schema/tests/address/postal/: test_address_parse_address.py  test_transform_address.py
projects/schema/tests/address/pyap/: test_address_parse_address.py
(+463 files in other folders)
