[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <3028114+parnell@users.noreply.github.com>"]
description = ""
name = "qai"
packages = []
readme = "README.md"
version = "0.5.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.poetry.group.qai-agent.dependencies]
qai-agent = {path = "projects/agent"}

[tool.poetry.group.qai-ai.dependencies]
qai-ai = {path = "projects/ai"}

[tool.poetry.group.qai-chat.dependencies]
qai-chat = {path = "projects/chat"}

[tool.poetry.group.qai-core.dependencies]
qai-core = {path = "projects/core"}

[tool.poetry.group.qai-scraper.dependencies]
qai-scraper = {path = "projects/scraper"}

[tool.poetry.group.qai-server.dependencies]
qai-server = {path = "projects/server"}

[tool.poetry.group.qai-storage.dependencies]
qai-storage = {path = "projects/storage"}

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
