[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.mypy]
disable_error_code = "import-untyped"
files = ["pi_blink", "tests"]
pretty = true
python_version = "3.11"
show_error_codes = true

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = "Qai Agents for the Qai AI Platform"
name = "qai-agent"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.6.1"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
instructor = "^1.3.2"
multiprocess = "^0.70.16"
mysql-connector-python = "^8.4.0"
openai = "^1.23.2"
pandas = "^2.2.1"
pip = "^24.0"
pydantic = "^2.7.0"
pymongo = "^4.6.3"
python-dateutil = "2.8.2"
python-dotenv = "^1.0.1"
qai-ai = {develop = true, path = "../ai"}
qai-core = {develop = true, path = "../core"}
qai-schema = {develop = true, path = "../schema"}
sqlalchemy = "^2.0.29"
qrev-instructor = "^0.5.5"
pi-blink = "^1.0.3"
pdl-api = "^0.1.2"
pi-conf = "^0.8.5.1"
pi-log = "^0.5.8.1"

[tool.poetry.group.dev.dependencies]
accelerate = "^0.29.3"
bitsandbytes = "^0.42.0"
pytest-asyncio = "^0.23.7"
toml-sort = "^0.23.1"
transformers = "^4.40.1"
types-requests = "^2.32.0.20240602"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
