[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = "Qai AI API"
name = "qai-ai"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.6.1"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chromadb = "^0.5.5"
dataclasses-json = "^0.6.4"
huggingface = "^0.0.1"
langchain-community = "^0.0.34"
llama-index = "^0.10.30"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-llms-huggingface = "^0.2.5"
llama-index-vector-stores-chroma = "^0.1.7"
openai = "^1.23.2"
pandas = "^2.2.1"
pi-conf = "^0.8.5.2"
pi-log = "^0.5.8.1"
qai-storage = {develop = true, path = "../storage"}
termcolor = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[[tool.poetry.source]]
name = "pypi"
priority = "primary"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
