[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "qai-chat"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.5.1"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.3"
llama-index = "^0.10.30"
llama-index-llms-openai = "^0.1.16"
llama-index-vector-stores-chroma = "^0.1.6"
openai = "^1.23.2"
pi-conf = "^0.7.7.4"
pi-log = "^0.5.7.3"
python-dotenv = "^1.0.1"
torch = "^2.2.1"
# torch = [
#     {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", url = "https://download.pytorch.org/whl/cpu/torch-2.2.1-cp311-none-macosx_11_0_arm64.whl"},
#     {markers = "sys_platform == 'linux'", url = "https://download.pytorch.org/whl/cpu-cxx11-abi/torch-2.2.1%2Bcpu.cxx11.abi-cp311-cp311-linux_x86_64.whl"},
# ]
qai-ai = "^0.5.0"
qai-core = "^0.5.0"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
ecs-deploy = "^1.14.0"

[tool.poetry.scripts]
req = "src.cli:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "dpypi"
priority = "supplemental"
url = "http://localhost:8083"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
overrides."tool.poetry.dependencies".first = ["python"]
