[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "qai-chat"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.6.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.3"
llama-index = "^0.10.30"
llama-index-llms-openai = "^0.1.16"
llama-index-vector-stores-chroma = "^0.1.6"
openai = "^1.23.2"
pi-conf = "^0.8.5"
pi-log = "^0.5.8.1"
python-dotenv = "^1.0.1"
qai-ai = "^0.6.0"
qai-core = "^0.6.0"
torch = [
    {markers = "sys_platform == 'darwin' and platform_machine == 'arm64'", source = "pypi", version = "^2.3.0"},
    {platform = "darwin", source = "pypi", version = "^2.3.0"},
    {platform = "linux", source = "pytorch-cpu-src", version = "=2.3.0+cpu"},
    {platform = "win32", source = "pytorch-cpu-src", version = "=2.3.0+cpu"},
]
qai-agent = "^0.6.1"

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
ecs-deploy = "^1.14.0"

[tool.poetry.scripts]
req = "src.cli:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "pytorch-cpu-src"
priority = "explicit"
url = "https://download.pytorch.org/whl/cpu"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
overrides."tool.poetry.dependencies".first = ["python"]
