[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = ""
name = "qai-chat"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.6.0"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flask = "^3.0.3"
llama-index = "^0.10.30"
llama-index-llms-openai = "^0.1.16"
llama-index-vector-stores-chroma = "^0.1.6"
openai = "^1.23.2"
pi-conf = "^0.8.5.2"
pi-log = "^0.5.8.1"
python-dotenv = "^1.0.1"
qai-ai = {develop = true, path = "../ai"}
qai-core = {develop = true, path = "../core"}
qai-agent = {develop = true, path = "../agent"}

[tool.poetry.dev-dependencies]
autoflake = "^2.2.1"
ecs-deploy = "^1.14.0"

[tool.poetry.scripts]
req = "src.cli:main"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.tomlsort]
all = true
in_place = true
overrides."tool.poetry.dependencies".first = ["python"]
