[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <3028114+parnell@users.noreply.github.com>"]
description = ""
name = "chroma-server"
packages = [{from = "src", include = "chroma-server"}]
readme = "README.md"
version = "0.6.1"

[tool.poetry.dependencies]
python = "^3.10.13"
boto3 = "^1.28.46"
chromadb = "^0.5.5"
llama-index = "^0.10.6"
llama-index-embeddings-huggingface = "^0.1.4"
llama-index-vector-stores-chroma = "^0.1.6"
pi-conf = "^0.8.5.1"
pip = "^24.0"
python-dotenv = "^1.0.1"
toml = "^0.10.2"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
overrides."tool.poetry.dependencies".first = ["python"]
