[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <152523161+leeparnell@users.noreply.github.com>"]
description = "Qai Storage API"
name = "qai-storage"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.6.1"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
chromadb = "^0.5.5"
llama-index = "^0.10.3"
llama-index-agent-openai = "^0.2.3"
llama-index-core = "^0.10.3"
llama-index-embeddings-huggingface = "^0.2.0"
llama-index-embeddings-langchain = "^0.1.1"
llama-index-llms-huggingface = "^0.2.5"
llama-index-llms-openai = "^0.1.1"
llama-index-vector-stores-chroma = "^0.1.1"
numpy = "^1.26.3"
pi-conf = "^0.8.5.1"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
toml-sort = "^0.23.1"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
overrides."tool.poetry.dependencies".first = ["python"]
