[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["parnell <3028114+parnell@users.noreply.github.com>"]
description = ""
name = "qai-template"
packages = [{from = "src", include = "qai"}]
readme = "README.md"
version = "0.1"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

[tool.tomlsort]
all = true
in_place = true
spaces_before_inline_comment = 2  # Match Python PEP 8
spaces_indent_inline_array = 4  # Match Python PEP 8
trailing_comma_inline_array = true
overrides."tool.poetry.dependencies".first = ["python"]
